--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -1,12 +1,15 @@
 .additional-products {
+  margin-bottom: 35px;
+
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
   }
 
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 245px;
     column-gap: 80px;
+    margin-bottom: 87px;
   }
 }
 
@@ -18,37 +21,46 @@
   font-size: 24px;
   line-height: 24px;
   color: $basic-black;
-  margin: 0 0 36px 0;
+  margin: 0 0 14px 0;
+  padding-bottom: 35px;
+  border-bottom: 1px solid $special-light-grey3;
 
 
   &::before {
     position: absolute;
     content: "";
-    left: 247px;
     top: 15px;
+    left: 247px;
+    border: 1px solid $basic-green;
+    width: 100vw;
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    transform-origin: left;
+    transform: rotate(180deg);
+    top: 15px;
+    left: -20px;
     border-top: 2px solid $basic-green;
-    width: 53px;
+    width: 100vw;
   }
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin-left: 37px;
-    margin-bottom: 69px;
+    margin-bottom: 45px;
+    border: none;
 
     &::before {
-      top: 20px;
-      left: 375px;
-      width: 328px;
+      top: 22px;
+      left: 374px;
     }
 
     &::after {
-      position: absolute;
-      content: "";
-      top: 20px;
-      left: -70px;
-      border-top: 2px solid $basic-green;
-      width: 30px;
+      top: 22px;
+      left: -37px;
     }
   }
 
@@ -56,17 +68,17 @@
     margin-left: 0;
     grid-row: 1/2;
     grid-column: 1/5;
+    padding-bottom: 0;
+    margin-bottom: 80px;
 
     &::before {
-      top: 20px;
-      left: 375px;
-      width: 957px;
+      top: 23px;
+      left: 373px;
     }
 
     &::after {
-      top: 20px;
-      left: -109px;
-      width: 70px;
+      top: 23px;
+      left: -40px;
     }
   }
 }
@@ -91,7 +103,7 @@
 .additional-products__list {
   list-style: none;
   padding: 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 38px 0;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 69px;
@@ -104,11 +116,11 @@
 }
 
 .additional-products__item-wrapper {
-  margin-bottom: 19px;
+  margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
     margin: 0;
-    padding: 0 38px;
+    padding: 0 37px;
   }
 
   @media (min-width: $desktop-width) {
@@ -123,7 +135,7 @@
   margin-bottom: 13px;
 
   @media (min-width: $tablet-width) {
-    padding: 26px 0 28px 0;
+    padding: 26px 0 26px 0;
     border: 1px solid $special-light-grey3;
     margin-bottom: 0;
   }
@@ -131,25 +143,51 @@
   @media (min-width: $desktop-width) {
     border-left: none;
     border-right: none;
-    padding: 15px 0;
+    padding: 15px 0 15px 0;
   }
 }
 
 .additional-products__link {
   width: 100%;
+
+  &:hover {
+    background-color: $basic-green2;
+  }
+
+  &:active {
+    background-color: $basic-green2;
+    color: $special-basic-white;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 11px 0 8px 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 11px 0 9px 0;
+  }
 }
 
 .additional-products__text {
-  margin: 0 0 13px 0;
+  margin: 0 0 15px 0;
   display: flex;
   justify-content: space-between;
   line-height: 14px;
 
+  @media (min-width: $tablet-width) {
+    display: grid;
+    margin: 6px 0 0 0;
+    grid-template-columns: 193px 93px;
+    text-align: end;
+    line-height: 14px;
+  }
+
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 80px;
-    padding-top: 12px;
+    padding-top: 17px;
     margin: 0;
+    text-align: start;
   }
 }
 
@@ -157,42 +195,51 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background:  url("../../img/logo/icon-gift.svg") 100px 50px no-repeat,
+  background:  url("../../img/logo/icon-gift.svg") 100px 56px no-repeat,
     url("../img/background/additional-products.png");
   min-height: 289px;
-  padding-top: 58px;
-  padding-bottom: 58px;
+  padding-top: 55px;
+  padding-bottom: 41px;
 
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
     align-items: flex-start;
-    background: url("../../img/logo/icon-gift.svg") 100px 50px no-repeat,
+    background: url("../../img/logo/icon-gift.svg") 78px 56px no-repeat,
       url("../img/background/cat-green.png") no-repeat;
     min-height: 200px;
-    padding: 58px 124px 58px 20px;
+    padding: 72px 118px 58px 20px;
   }
 
   @media (min-width: $desktop-width) {
-    background: url("../../img/logo/icon-gift.svg") 80px 50px no-repeat,
+    background: url("../../img/logo/icon-gift.svg") 50% 55px no-repeat,
       url("../../img/background/additional-products-desktop.png") 80% no-repeat;
-    padding: 184px 41px 41px 41px;
+    padding: 186px 41px 41px 41px;
   }
 }
 
 .additional-products__stocks-text {
   margin: 0;
   color: $basic-white;
-  width: 161px;
+  width: 167px;
   text-align: center;
   font-size: 16px;
   line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: center;
+  }
 }
 
 .additional-products__wrapper {
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 28px;
+    margin-bottom: 25px;
+    padding: 0 1px 0 1px;
   }
 
   @media (min-width: $desktop-width) {
@@ -203,10 +250,6 @@
 }
 
 .additional-products__volume {
-  @media (min-width: $tablet-width) {
-    margin-right: 49px;
-  }
-
   @media (min-width: $desktop-width) {
     margin-right: 0;
   }
