--- a/source/sass/blocks/energy-food.scss
+++ b/source/sass/blocks/energy-food.scss
@@ -1,6 +1,10 @@
 .energy-food {
   @media (min-width: $tablet-width) {
-    margin-bottom: 68px;
+    margin-bottom: 69px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 75px;
   }
 }
 
@@ -13,18 +17,19 @@
 }
 
 .energy-food__more-products {
-  background: url("../img/different/plus-mobile.png") 50% 0 no-repeat;
+  background: url("../img/different/plus-mobile.png") 50% 25px no-repeat;
   text-align: center;
-  padding: 53px 20px 25px 20px;
+  padding: 79px 20px 23px 20px;
+  border-top: 1px solid $special-light-grey2;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("../img/different/plus.svg") 50% 52px no-repeat;
+    background: url("../img/different/plus.svg") 50% 50px no-repeat;
     border: 2px solid $basic-grey;
-    padding: 161px 35px 40px 35px;
-    height: 430px;
+    padding: 161px 36px 36px;
+    min-height: 429px;
   }
 }
 
@@ -32,6 +37,15 @@
   background-color: $basic-grey;
   color: $special-dark-grey;
   width: 100%;
+
+  &:hover {
+    background-color: $special-light-grey2;
+  }
+
+  &:active {
+    background-color: $special-light-grey2;
+    color: $special-dark-grey3;
+  }
 
   @media (min-width: $tablet-width) {
     padding: 10px 39px;
@@ -48,7 +62,14 @@
     font-size: 20px;
     line-height: 20px;
     width: 134px;
-    margin-bottom: 20px;
+    margin-bottom: 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 20px;
+    width: 134px;
+    margin-bottom: 25px;
   }
 }
 
@@ -59,10 +80,14 @@
   margin: 0 0 21px 0;
 
   @media (min-width: $tablet-width) {
-    width: 170px;
+    width: 168px;
     font-size: 16px;
     line-height: 18px;
     margin-bottom: 87px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 86px;
   }
 }
 
@@ -70,6 +95,11 @@
   border-bottom: 1px solid $dark-grey;
 
   @media (min-width: $tablet-width) {
+    padding-top: 81px;
+    border: none;
+  }
+
+  @media (min-width: $desktop-width) {
     padding-top: 81px;
     border: none;
   }
