--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -59,7 +59,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
-    line-height: 22px;
+    line-height: 23px;
   }
 
   @media (min-width: $desktop-width) {
@@ -80,6 +80,7 @@
     text-align: end;
     font-size: 16px;
     line-height: 20px;
+    padding-right: 2px;
   }
 
   @media (min-width: $desktop-width) {
