--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,13 +9,12 @@
   font-size: 14px;
   line-height: 18px;
   color: $special-dark-grey;
-
   min-height: 100%;
   margin: 0;
   padding: 0;
+  min-width: $height-mobile;
 
   @media (min-width: $tablet-width) {
-    min-width: $tablet-width;
     font-size: 16px;
     line-height: 24px;
   }
