--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -14,55 +14,21 @@
 }
 
 .additional-products__title {
-  position: relative;
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 24px;
   line-height: 24px;
   color: $basic-black;
-  margin: 0 0 14px 0;
-  padding-bottom: 35px;
-  border-bottom: 1px solid $special-light-grey3;
-  width: max-content;
+  margin: 0 0 35px 0;
 
-
-  &::before {
-    position: absolute;
-    content: "";
-    top: 15px;
-    left: calc(100% + 20px);
-    border: 1px solid $basic-green;
-    width: 100vw;
-  }
-
-  &::after {
-    position: absolute;
-    content: "";
-    transform-origin: left;
-    transform: rotate(180deg);
-    top: 15px;
-    left: -20px;
-    border-top: 2px solid $basic-green;
-    width: 100vw;
-  }
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin-left: 37px;
-    margin-bottom: 45px;
+    margin-bottom: 80px;
     border: none;
-
-    &::before {
-      top: 22px;
-      left: calc(100% + 40px);
-    }
-
-    &::after {
-      top: 22px;
-      left: -37px;
-    }
   }
 
   @media (min-width: $desktop-width) {
@@ -71,14 +37,47 @@
     grid-column: 1/5;
     padding-bottom: 0;
     margin-bottom: 80px;
+  }
+}
 
+.additional-products__title-wrapper {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 21px;
+    left: calc(100% + 20px);
+    border: 1px solid $basic-green;
+    width: 100vw;
+  }
+
+  @media (min-width: $tablet-width) {
     &::before {
-      top: 23px;
+      top: 31px;
       left: calc(100% + 40px);
     }
 
     &::after {
-      top: 23px;
+      position: absolute;
+      content: "";
+      transform-origin: left;
+      transform: rotate(180deg);
+      top: 31px;
+      left: -37px;
+      border-top: 2px solid $basic-green;
+      width: 100vw;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &::before {
+      top: 32px;
+      left: calc(100% + 40px);
+    }
+
+    &::after {
+      top: 32px;
       left: -40px;
     }
   }
@@ -104,7 +103,7 @@
 .additional-products__list {
   list-style: none;
   padding: 0;
-  margin: 0 0 38px 0;
+  margin: 0 0 39px 0;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 69px;
@@ -133,18 +132,28 @@
 
 .additional-products__item {
   border-bottom: 1px solid $special-light-grey3;
-  margin-bottom: 13px;
+  padding-top: 12px;
 
   @media (min-width: $tablet-width) {
     padding: 26px 0 26px 0;
-    border: 1px solid $special-light-grey3;
+    border-bottom: 1px solid $special-light-grey3;
+    border-left: 1px solid $special-light-grey3;
+    border-right: 1px solid $special-light-grey3;
     margin-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
     border-left: none;
     border-right: none;
-    padding: 15px 0 15px 0;
+    padding: 15px 0 16px 0;
+  }
+}
+
+.additional-products__item--firs {
+  border-top: 1px solid $special-light-grey3;
+
+  @media (min-width: $desktop-width) {
+    border-right: none;
   }
 }
 
@@ -170,7 +179,7 @@
 }
 
 .additional-products__text {
-  margin: 0 0 15px 0;
+  margin: 0 0 16px 0;
   display: flex;
   justify-content: space-between;
   line-height: 14px;
@@ -239,7 +248,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 25px;
+    margin-bottom: 26px;
     padding: 0 1px 0 1px;
   }
 
