--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,67 +1,74 @@
 .product {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   padding: 20px 20px 24px 20px;
 
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 8px 36px 40px 36px;
+    padding: 10px 36px 40px 36px;
     margin: 0;
     background: linear-gradient(0deg, $basic-grey2 430px, transparent 81px);
   }
 
   @media (min-width: $desktop-width) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 1px 36px 40px 36px;
     margin: 0;
     background: linear-gradient(0deg, $basic-grey2 431px, transparent 81px);
   }
 }
 
+.product__wrapper {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .product__image {
+  display: inline-block;
+  width: 140px;
+  height: 112px;
+
   @media (min-width: $tablet-width) {
     width: 168px;
     height: 200px;
-    margin-bottom: 29px;
   }
 
   @media (min-width: $desktop-width) {
     width: 172px;
     height: 196px;
-    margin-bottom: 38px;
   }
 }
 
 .product__image-link {
   display: inline-block;
-  grid-row: 1/3;
-  grid-column-start: 1;
-  grid-column-end: -1;
+  width: 140px;
+
+  @media (min-width: $tablet-width) {
+    width: 168px;
+    height: 200px;
+    margin-bottom: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 172px;
+    height: 196px;
+    margin-bottom: 45px;
+  }
 }
 
 .product__title {
-  margin: 0;
-  grid-row: 1/2;
-  grid-column-start: 2;
-  grid-column-end: 3;
+  margin: 0 0 14px 0;
   width: 80px;
 
   @media (min-width: $tablet-width) {
     margin-left: 2px;
+    margin-bottom: 10px;
     text-align: center;
     width: 150px;
-  }
-}
-
-.product__title-text {
-  margin: 0;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 11px;
   }
 
   @media (min-width: $desktop-width) {
@@ -70,17 +77,19 @@
   }
 }
 
+.product__title-text {
+  margin: 0;
+}
+
 .product__table {
-  grid-row: 2/3;
-  grid-column-start: 2;
-  grid-column-end: 3;
   border-collapse: collapse;
+  width: 140px;
   font-size: 12px;
   line-height: 14px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 27px;
-    width: 100%;
+    width: 250px;
     font-size: 16px;
     line-height: 28px;
   }
@@ -95,10 +104,8 @@
 }
 
 .product__link {
-  grid-row: 3/4;
-  grid-column-start: 1;
-  grid-column-end: 3;
   margin-top: 8px;
+  width: 100%;
 
   &:hover {
     background-color: $basic-green2;
@@ -110,13 +117,21 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-left: 2px;
+    margin-left: 1px;
     padding: 10px 93px 9px 93px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 2px;
+    margin-left: 0;
     padding: 10px 53px 10px 53px;
+  }
+}
+
+.product__link-wrapper {
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 2px 0 2px;
   }
 }
 
