--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -111,9 +111,16 @@
 .page-header__wrapper-food {
   background:
     url("../img/background/fon-cat.svg") repeat-x,
-    url("../../img/background/foot-header-cat.jpg") no-repeat top center,
+    url("../img/background/foot-header-cat.jpg") no-repeat top center,
     linear-gradient(180deg, $special-dark-grey 63%, transparent 37%);
 
+  @media (min-resolution: 2dppx) {
+    background:
+      url("../img/background/fon-cat.svg") repeat-x,
+      url("../img/background/foot-header-cat2x.jpg") no-repeat top center,
+      linear-gradient(180deg, $special-dark-grey 63%, transparent 37%);
+    background-size: auto, 320px 302px, auto;
+  }
 
   @media (min-width: $tablet-width) {
     background: none;
