--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -3,6 +3,8 @@
 }
 
 .our-address__address-wrapper {
+  z-index: 2;
+
   @media (min-width: $desktop-width) {
     position: absolute;
     top: 96px;
@@ -115,18 +117,32 @@
 }
 
 .our-address__map {
-  background: url("../img/background/location-mobile.png");
-  min-height: min-content;
+  position: relative;
+  min-height: 362px;
   padding: 0;
+  z-index: 1;
 
   @media (min-width: $tablet-width) {
-    background: url("../img/background/background-tablet.png") no-repeat;
+    height: 400px;
+  }
+}
+
+.our-address__map-wrapper {
+  position: absolute;
+  height: 362px;
+  bottom: 0;
+  left: calc((100% - 320px) / 2);
+
+  @media (min-width: $tablet-width) {
+    bottom: 0;
+    left: calc((100% - 768px) / 2);
     height: 400px;
   }
 
   @media (min-width: $desktop-width) {
-    background: url("../img/background/background-desktop.png") no-repeat;
+    left: calc((100% - 1440px) / 2);
     height: 400px;
+    top: 0;
   }
 }
 
