--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -131,19 +131,22 @@
   position: absolute;
   height: 362px;
   bottom: 0;
-  left: calc((100% - 320px) / 2);
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     bottom: 0;
-    left: calc((100% - 768px) / 2);
     height: 400px;
   }
 
   @media (min-width: $desktop-width) {
-    left: calc((100% - 1440px) / 2);
     height: 400px;
     top: 0;
   }
+}
+
+.our-address__map-image {
+  width: 100%;
+  height: 100%;
 }
 
 .our-address__map iframe {
