--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -247,25 +247,44 @@
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  background:  url("../../img/logo/icon-gift.svg") 100px 56px no-repeat,
+  background:  url("../img/logo/icon-gift.svg") 100px 56px no-repeat,
     url("../img/background/additional-products.png");
   min-height: 289px;
   padding-top: 55px;
   padding-bottom: 41px;
 
+  @media (min-resolution: 2dppx) {
+    background:  url("../img/logo/icon-gift.svg") 100px 56px no-repeat,
+      url("../img/background/additional-products2x.png");
+    background-size: auto, 280px 289px;
+  }
+
   @media (min-width: $tablet-width) {
     justify-content: flex-end;
     align-items: flex-start;
-    background: url("../../img/logo/icon-gift.svg") 78px 56px no-repeat,
+    background: url("../img/logo/icon-gift.svg") 78px 56px no-repeat,
       url("../img/background/cat-green.png") no-repeat;
     min-height: 200px;
     padding: 72px 118px 58px 20px;
+
+    @media (min-resolution: 2dppx) {
+      background: url("../img/logo/icon-gift.svg") 78px 56px no-repeat,
+        url("../img/background/cat-green2x.png") no-repeat;
+      background-size: auto, 708px 200px;
+    }
   }
 
   @media (min-width: $desktop-width) {
     background: url("../../img/logo/icon-gift.svg") 50% 55px no-repeat,
       url("../../img/background/additional-products-desktop.png") 80% no-repeat;
     padding: 186px 39px 41px 39px;
+
+
+    @media (min-resolution: 2dppx) {
+      background: url("../../img/logo/icon-gift.svg") 50% 55px no-repeat,
+        url("../../img/background/additional-products-desktop2x.png") 80% no-repeat;
+      background-size: auto, 245px 289px;
+    }
   }
 }
 
