--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -11,7 +11,7 @@
   @media (min-width: $desktop-width) {
     padding-bottom: 0;
     background: linear-gradient(180deg, $basic-white, $basic-white 195px, transparent 195px),
-      linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
+      linear-gradient(90deg, $basic-grey 50%,$basic-grey2 51%);
   }
 }
 
