--- a/source/sass/blocks/fields-list.scss
+++ b/source/sass/blocks/fields-list.scss
@@ -15,6 +15,10 @@
   }
 }
 
+.fields-list__item--last {
+  margin-bottom: 25px;
+}
+
 .fields-list--checkbox {
   @media (min-width: $tablet-width) {
     display: grid;
