--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -311,11 +311,11 @@
   left: -20px;
 
   @media (min-width: $tablet-width) {
-    left: 40px;
+    left: 56px;
   }
 
   @media (min-width: $desktop-width) {
-    left: -17px;
+    left: 0;
     top: 3px;
   }
 }
@@ -418,14 +418,14 @@
   margin: 3px 0 0 0;
 
   @media (min-width: $tablet-width) {
-    height: 34px;
-    width: 34px;
+    height: 31px;
+    width: 31px;
     border-radius: 50%;
     background: $basic-green;
-    border: 13px solid $basic-white;
+    border: 12px solid $basic-white;
     cursor: pointer;
     box-shadow: 0 0 0 1px $special-light-grey3, 0 1px 3px $special-light-grey3;
-    margin-top: -14px;
+    margin-top: -13px;
 
     &:hover {
       box-shadow: 0 0 0 1px $special-light-grey3, 0 2px 4px $special-light-grey3;
@@ -470,7 +470,7 @@
     width: 9px;
     border-radius: 50%;
     background: $basic-green;
-    border: 14px solid $basic-white;
+    border: 11px solid $basic-white;
     cursor: pointer;
     box-shadow: 0 0 0 1px $special-light-grey3, 0 1px 3px $special-light-grey3;
     margin-top: -14px;
