--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -17,19 +17,24 @@
   }
 }
 
-.form__fieldset--first {
+.form__fieldset--personal-data {
   margin-bottom: 28px;
+  padding: 0 0 25px 0;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 46px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
 .form__fieldset--contacts {
-  margin-bottom: 10px;
+  margin-bottom: 23px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 45px;
+    margin-bottom: 64px;
   }
 
   @media (min-width: $desktop-width) {
@@ -223,6 +228,7 @@
 
 .form__label--age {
   margin-right: 15px;
+  width: max-content;
 
   @media (min-width: $tablet-width) {
     margin-right: 16px;
@@ -256,11 +262,14 @@
   line-height: 18px;
   color: $special-dark-grey;
   text-transform: uppercase;
+  height: 46px;
+
 
   @media (min-width: $tablet-width) {
-    padding: 11px 18px;
+    padding: 9px 18px;
     font-size: 20px;
     line-height: 29px;
+    height: 53px;
   }
 }
 
@@ -309,6 +318,7 @@
 }
 
 .form__fieldset--radio {
+  padding: 0 0 23px 0;
   margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
@@ -323,9 +333,11 @@
 }
 
 .form__fieldset--checkbox {
+  padding: 0 0 23px 0;
   margin-bottom: 14px;
 
   @media (min-width: $tablet-width) {
+    padding: 0;
     margin-bottom: 34px;
   }
 
