--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -37,6 +37,10 @@
   }
 }
 
+.main-nav__toggle--error {
+  display: none;
+}
+
 .main-nav__link {
   display: inline-block;
   padding: 23px 24px 22px 24px;
