--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,6 +12,8 @@
 @import "blocks/copyright.scss";
 @import "blocks/effect.scss";
 @import "blocks/example.scss";
+@import "blocks/before.scss";
+@import "blocks/after.scss";
 @import "blocks/functional-food.scss";
 @import "blocks/our-address.scss";
 @import "blocks/page-footer.scss";
